UtahLiveDataTest/src/objects/KeyContacts__c.object
<CustomObject>
    <description>This object is used to store Key Contacts on both Grantor and Grantee side</description>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Key Contacts</relationshipLabel>
        <relationshipName>Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Contact__r.MailingCity</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Key Contacts</relationshipLabel>
        <relationshipName>Key_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Contact__r.MailingCountry</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <label>First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <formula>Contact__r.LastName</formula>
        <label>Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization__c</fullName>
        <formula>Contact__r.Account.Name</formula>
        <label>Organization</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectRole__c</fullName>
        <label>Project Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Principal Investigator</fullName>
                </value>
                <value>
                    <fullName>Project Director/Manager</fullName>
                </value>
                <value>
                    <fullName>Fiscal Contact</fullName>
                </value>
                <value>
                    <fullName>Grants Administrator</fullName>
                </value>
                <value>
                    <fullName>Ebiz POC</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Contact__r.MailingState</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Contact__r.MailingStreet</formula>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TypeOfPhase__c</fullName>
        <description>This field indicates to which phase the key contact belongs to</description>
        <label>Type Of Phase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Funding Opportunity</fullName>
                </value>
                <value>
                    <fullName>Application</fullName>
                </value>
                <value>
                    <fullName>Awards</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <formula>Contact__r.AccountRecordType__c</formula>
        <label>Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <formula>Contact__r.MailingPostalCode</formula>
        <label>Zip Code</label>
        <type>Text</type>
    </fields>
    <label>Key Contacts</label>
    <nameField>
        <label>Key Contacts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Key Contacts</pluralLabel>
    <recordTypes>
        <fullName>Grantee</fullName>
        <active>true</active>
        <description>This will be used for Grantee Key Contacts</description>
        <label>Grantee</label>
    </recordTypes>
    <recordTypes>
        <fullName>Grantor</fullName>
        <active>true</active>
        <description>This will be used for Grantor Key Contacts</description>
        <label>Grantor</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>